--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "eslint-config-next": "14.2.3",
     "postcss": "^8",
     "prettier-plugin-tailwindcss": "^0.5.14",
+    "sass": "^1.77.2",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
   }
