--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "@fortawesome/free-solid-svg-icons": "^6.5.2",
     "@fortawesome/react-fontawesome": "^0.2.1",
     "@types/react-slick": "^0.23.13",
-    "next": "14.2.3",
+    "next": "^14.2.35",
     "react": "^18",
     "react-slick": "^0.30.2",
     "slick-carousel": "^1.8.1"
@@ -24,8 +24,8 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
-    "eslint": "^8",
-    "eslint-config-next": "14.2.3",
+    "eslint": "^9",
+    "eslint-config-next": "^16.1.4",
     "postcss": "^8",
     "prettier-plugin-tailwindcss": "^0.5.14",
     "sass": "^1.77.2",
